[package]
name = "dao"
version = "0.1.0"
authors = ["di <dwu@uuzu.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
r2d2 = "0.8.8"
diesel = { version = "1.4", features = ["postgres", "r2d2", "uuid", "chrono"] }
lazy_static = "1.4.0"
serde = { version = "1.0.100", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.15", features = ["r2d2"] }
anyhow = "1.0.25"
serde_derive = "1.0"