[package]
name = "kio"
version = "0.1.0"
authors = ["di <dwu@uuzu.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nickel = "0.11.0"
tera = "1.1.0"
serde_derive = "1.0.104"
serde_json = "1.0.48"
serde = "1.0.104"